--- a/kalimba.html
+++ b/kalimba.html
@@ -10,8 +10,13 @@
         --bg-color: #d4a574; 
         --key-light: #f0f0f0;
         --key-dark: #c0c0c0;
+        --app-width: 100vw;
         --app-height: 100vh;
+        --viewport-offset-left: 0px;
+        --viewport-offset-right: 0px;
         --viewport-offset-bottom: 0px;
+        --controls-side-inset-left: calc(env(safe-area-inset-left, 0px) + var(--viewport-offset-left));
+        --controls-side-inset-right: calc(env(safe-area-inset-right, 0px) + var(--viewport-offset-right));
         --controls-bottom-inset: calc(env(safe-area-inset-bottom, 0px) + var(--viewport-offset-bottom));
     }
 
@@ -32,7 +37,7 @@
     /* 琴身 */
     .kalimba-body {
         position: relative;
-        width: 100vw;
+        width: var(--app-width);
         height: var(--app-height);
         background: 
             repeating-linear-gradient(
@@ -168,13 +173,16 @@
 
     .controls-panel {
         position: absolute;
-        left: 50%;
+        left: calc(8px + var(--controls-side-inset-left));
+        right: calc(8px + var(--controls-side-inset-right));
         bottom: calc(16px + var(--controls-bottom-inset));
-        transform: translateX(-50%);
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 10px;
         align-items: flex-end;
         padding: 10px 12px;
+        box-sizing: border-box;
         border-radius: 12px;
         background: rgba(0,0,0,0.3);
         z-index: 20;
@@ -184,6 +192,7 @@
         display: flex;
         flex-direction: column;
         gap: 4px;
+        flex: 0 1 92px;
         min-width: 92px;
         color: #fff;
         font-size: 12px;
@@ -330,9 +339,15 @@
 
         const updateViewportMetrics = () => {
             const vv = window.visualViewport;
+            const visibleWidth = vv ? vv.width : window.innerWidth;
             const visibleHeight = vv ? vv.height : window.innerHeight;
+            const viewportOffsetLeft = vv ? Math.max(0, vv.offsetLeft) : 0;
+            const viewportOffsetRight = vv ? Math.max(0, window.innerWidth - (vv.width + vv.offsetLeft)) : 0;
             const viewportOffsetBottom = vv ? Math.max(0, window.innerHeight - (vv.height + vv.offsetTop)) : 0;
+            rootStyle.setProperty('--app-width', `${visibleWidth.toFixed(2)}px`);
             rootStyle.setProperty('--app-height', `${visibleHeight.toFixed(2)}px`);
+            rootStyle.setProperty('--viewport-offset-left', `${viewportOffsetLeft.toFixed(2)}px`);
+            rootStyle.setProperty('--viewport-offset-right', `${viewportOffsetRight.toFixed(2)}px`);
             rootStyle.setProperty('--viewport-offset-bottom', `${viewportOffsetBottom.toFixed(2)}px`);
         };
 
