--- a/kalimba.html
+++ b/kalimba.html
@@ -371,12 +371,21 @@
             const normalizedFreq = (freq - minNoteFreq) / (maxNoteFreq - minNoteFreq);
             const clamped = Math.min(1, Math.max(0, normalizedFreq));
             const smoothed = clamped * clamped * (3 - (2 * clamped));
-            return 0.58 + (0.37 * smoothed);
+            const baseTrim = 0.54 + (0.38 * smoothed);
+            if (freq <= 220) {
+                const lowBandFactor = 0.72 + (0.28 * (freq / 220));
+                return baseTrim * lowBandFactor;
+            }
+            if (freq < 330) {
+                const bridgeFactor = (freq - 220) / 110;
+                return baseTrim * (0.92 + (0.08 * bridgeFactor));
+            }
+            return baseTrim;
         };
 
         const getOptimizedGainScale = (gainScale, freq) => {
             const effectiveScale = Math.max(1, gainScale);
-            const compressedScale = 1 + Math.log1p((effectiveScale - 1) * 1.6);
+            const compressedScale = 1 + Math.log1p((effectiveScale - 1) * 1.25);
             return compressedScale * getFrequencyGainTrim(freq);
         };
 
@@ -385,22 +394,31 @@
 
             const osc = ctx.createOscillator();
             const gain = ctx.createGain();
+            const toneHighpass = ctx.createBiquadFilter();
             const now = ctx.currentTime;
             const normalizedGainScale = getOptimizedGainScale(gainScale, freq);
-            const peakGain = Math.min(0.72, 0.24 * normalizedGainScale);
-            const sustainGain = Math.min(0.36, 0.12 * normalizedGainScale);
+            const peakGain = Math.min(0.7, 0.24 * normalizedGainScale);
+            const sustainGain = Math.min(0.34, 0.11 * normalizedGainScale);
+            const attackTime = freq < 220 ? 0.016 : 0.01;
+            const releaseEnd = now + releaseTime;
+            const tailEnd = releaseEnd + 0.08;
 
             osc.type = 'sine';
             osc.frequency.setValueAtTime(freq, now);
+            toneHighpass.type = 'highpass';
+            toneHighpass.frequency.setValueAtTime(Math.min(65, Math.max(35, freq * 0.28)), now);
+            toneHighpass.Q.value = 0.6;
             gain.gain.setValueAtTime(0.0001, now);
-            gain.gain.linearRampToValueAtTime(peakGain, now + 0.01);
+            gain.gain.linearRampToValueAtTime(peakGain, now + attackTime);
             gain.gain.exponentialRampToValueAtTime(Math.max(0.001, sustainGain), now + 0.12);
-            gain.gain.exponentialRampToValueAtTime(0.001, now + releaseTime);
+            gain.gain.exponentialRampToValueAtTime(0.0004, releaseEnd);
+            gain.gain.exponentialRampToValueAtTime(0.00001, tailEnd);
 
             osc.connect(gain);
-            gain.connect(masterGain);
+            gain.connect(toneHighpass);
+            toneHighpass.connect(masterGain);
             osc.start(now);
-            osc.stop(now + releaseTime + 0.05);
+            osc.stop(tailEnd + 0.01);
         }
 
         const arrangeNotes = (rangeNotes) => rangeNotes
